fix: overflow in tooltip

--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -11,9 +11,6 @@ html {
 	background-size: 100%;
 
 	font-size: 16px;
-
-	overflow-x: hidden;
-	width: 100%;
 }
 
 body {
@@ -26,7 +23,6 @@ body {
 
 	overflow-x: hidden;
 	width: 100%;
-	position: relative;
 
 	scroll-behavior: smooth;
 }
@@ -63,7 +59,3 @@ p {
 img {
 	position: relative;
 }
-
-// * {
-// 	outline: 1px solid red;
-// }
